Add button that lets users switch to light on dark background and back.

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -5,3 +5,14 @@
 button {
   margin-top: 25px;
 }
+
+.black-background {
+  background-color: black;
+  color: white;
+}
+
+
+
+#lightness{
+  display: none;
+}
